--- a/index.html
+++ b/index.html
@@ -308,6 +308,10 @@
             justify-content: center;
             transition: background-color 0.3s;
         }
+        .profile-image{
+            height: 40px;
+            width: 40px;
+        }
         
         .social-icon:hover {
             background-color: var(--secondary);
@@ -357,7 +361,9 @@
     <header>
         <div class="container">
             <div class="header-content">
-                <div class="profile-pic">MA</div>
+                <div class="profile-pic">
+                    <img class="profile-image" src="/me.png" alt="">
+                </div>
                 <div class="header-text">
                     <h1>Mayank Agnihotri</h1>
                     <h2>Aspiring Full Stack Developer</h2>
