updated image url

--- a/index.html
+++ b/index.html
@@ -309,8 +309,9 @@
             transition: background-color 0.3s;
         }
         .profile-image{
-            height: 40px;
-            width: 40px;
+            height: 100%;
+            width:100%;
+            border-radius:50%;
         }
         
         .social-icon:hover {
@@ -362,7 +363,7 @@
         <div class="container">
             <div class="header-content">
                 <div class="profile-pic">
-                    <img class="profile-image" src="/me.png" alt="">
+                    <img class="profile-image" src="https://i.ibb.co/tpywrBM0/me.png" alt="">
                 </div>
                 <div class="header-text">
                     <h1>Mayank Agnihotri</h1>
